BugFix: re-align contact section text for mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -538,6 +538,13 @@ ul {
 	background: url(http://meteortips.davidturnbull1.netdna-cdn.com/assets/images/dark_mosaic.png);
 } 
 
+@media only screen and (max-width : 992px) {
+	.contact-section-inner-container {
+		text-align: center;
+
+		}
+    }
+
 	.contact-title {
 		margin-bottom: 16px;
 	}
